Fix body horizontal scroll

--- a/src/wrappers/Landing/LandingWrapper.less
+++ b/src/wrappers/Landing/LandingWrapper.less
@@ -10,6 +10,7 @@ body,
 
 body {
   background: var(--alice-blue);
+  overflow-x: hidden;
 }
 
 .LandingWrapper {
